# Check-Alfred

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-destructive-bash.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: GROWTH_PLAN_3M.md  MANUEL-TEST-FR.md  RELEASING.md  integrate.md  plan-simplification-prod.md  verified_nlg.md
docs/adr/: 0001-event-id-global-uniqueness.md  0002-brique1-skeleton-fixes.md  0003-span-kind-classification.md  0004-brique2-mandate-engine-design.md  0005-brique3-report-engine-design.md  0006-brique4-verified-nlg-design.md  0007-brique5-delivery-cli-design.md  0008-brique6-demo-launch-polish-design.md  0009-yc-application-submitted-replan-v1-1.md  0010-brique7-real-agent-example.md  0011-brique8-langgraph-adapter.md  0011-day-scope-mandate-evaluation.md  0011-growth-plan-3m.md  0012-slack-native-block-kit.md  0012-watch-idempotence-and-ingest-casing.md  0013-byoa-bring-your-own-agent-plan.md  0014-langgraph-native-connector.md  0015-watch-loop-opt-in.md  0016-pypi-trusted-publishing.md  0017-realtime-deviation-alerts.md  0018-mandate-bootstrap-and-lint.md  0019-baseline-contextualized-digest.md  0020-shareable-html-report.md  0021-openai-agents-native-connector.md
docs/vcd/: alfred-v0.1.md
examples/agents/langgraph_bot/: README.md  agent.py  mandate.yaml
examples/agents/langgraph_refund_bot/: README.md  __init__.py  otlp_file.py  run.py
examples/agents/minimal/: README.md  agent.py  mandate.yaml
examples/agents/openai_agents_bot/: README.md  agent.py  mandate.yaml
examples/agents/refund_bot/: README.md  __init__.py  agent.py  orders.json  run.py  tickets.json  tools.py  tracer.py
examples/mandates/: refund-bot.yaml  sql-analyst.yaml
src/alfred/: __init__.py  _http.py  cli.py  config.py  cost.py  schedule.py  watch.py
src/alfred/deliver/: __init__.py  slack.py  stdout.py
src/alfred/demo/: __init__.py  fake_agent.py
src/alfred/instrument/: __init__.py  tracer.py
src/alfred/integrations/: __init__.py  langgraph.py  openai_agents.py
src/alfred/mandate/: __init__.py  bootstrap.py  engine.py  lint.py  model.py  yaml_io.py
src/alfred/narrate/: __init__.py  llm.py  model.py  render.py
src/alfred/report/: __init__.py  build.py  html.py  model.py  render.py
src/alfred/trace/: __init__.py  cost.py  ingest.py  model.py  store.py
tests/: _block_kit.py  conftest.py  test_cli.py  test_config.py  test_cost.py  test_deliver_slack.py  test_deliver_stdout.py  test_demo.py  test_example_minimal.py  test_example_refund_bot.py  test_http.py  test_instrument.py  test_integration_langgraph.py  test_integration_openai_agents.py  test_mandate_bootstrap.py  test_mandate_engine.py  test_mandate_lint.py  test_mandate_model.py  test_mandate_yaml.py  test_narrate_llm.py  test_narrate_render.py  test_report_baseline.py  test_report_build.py  test_report_html.py  test_report_model.py  test_report_render.py  test_schedule.py  test_trace_cost.py  test_trace_ingest.py  test_trace_model.py  test_trace_normalize.py  test_trace_store.py  test_watch.py
tests/fixtures/: block_kit_constraints.json  langgraph_otlp_sample.json  otlp_sample.json
