[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alfred-ai"
version = "0.1.0.dev0"
description = "Accountability layer for AI employees: mandate-anchored daily digests from agent traces."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Adrien Deleuil" }]
keywords = ["ai", "agents", "opentelemetry", "observability", "accountability", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[project.scripts]
alfred = "alfred.cli:main"

[project.urls]
Homepage = "https://github.com/alfred-ai/alfred"
Issues = "https://github.com/alfred-ai/alfred/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/alfred"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "C4", "SIM", "RUF"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N802"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/alfred", "tests"]
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"
