[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alfred-ai"
dynamic = ["version"]
description = "Accountability layer for AI employees: mandate-anchored daily digests from agent traces."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Adrien Deleuil" }]
keywords = ["ai", "agents", "opentelemetry", "observability", "accountability", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
  "pre-commit>=3.0",
]

[project.scripts]
alfred = "alfred.cli:main"

[project.urls]
# Points at the repo that actually exists today; move to the alfred-ai org
# when PLAN.md D3 (org + PyPI name reservation) is executed.
Homepage = "https://github.com/adriencr81/Check-Alfred"
Issues = "https://github.com/adriencr81/Check-Alfred/issues"

[tool.hatch.version]
path = "src/alfred/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/alfred"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "C4", "SIM", "RUF"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N802"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/alfred", "tests"]
# examples/agents lets mypy resolve (and strictly check) the refund_bot
# example imported by tests/test_example_refund_bot.py — see ADR 0010.
mypy_path = ["examples/agents"]
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true

[[tool.mypy.overrides]]
# The anthropic SDK is an example-only dependency (never installed in CI);
# run.py imports it lazily inside AnthropicClient. See ADR 0010, decision 2.
module = "anthropic"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"
